--- a/Vision-Service/requirements.txt
+++ b/Vision-Service/requirements.txt
@@ -6,5 +6,5 @@ accelerate>=0.33.0
 torch>=2.4.0
 protobuf
 sentencepiece
-git+https://github.com/huggingface/transformers.git
-git+https://github.com/huggingface/diffusers.git
+transformers>=5.0
+diffusers>=0.37
